# FrequencyGate

./: .gitignore  CMakeLists.txt  DistrhoPluginInfo.h  FrequencyGatePlugin.cpp  FrequencyGatePlugin.hpp  FrequencyGateUI.cpp  LICENSE  README.md  README_JP.md  build.ps1  pffft_alloc.c
